--- a/README
+++ b/README
@@ -5,6 +5,12 @@ README
 
 **************************************************
 
+# Installation
+For Ubuntu:
+```shell
+sudo apt-get install libopencv-core-dev libopencv-highgui-dev libopencv-objdetect-dev liblpsolve55-dev libopencv-ml-dev
+```
+
 Hi there.
 
 Thanks for your interest in Rhea. You can find more info on my homepage, aldusleaf.org.
